finish queue page